--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["next", "next/core-web-vitals", "prettier"]
+  "extends": ["next", "next/core-web-vitals", "prettier", "plugin:react-hooks/recommended"],
+  "rules": {
+    "react-hooks/exhaustive-deps": "error"
+  }
 }
