--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next", "next/core-web-vitals", "prettier", "plugin:react-hooks/recommended"],
   "rules": {
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "@next/next/no-img-element": "off"
   }
 }
