--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
   "extends": ["next", "next/core-web-vitals", "prettier", "plugin:react-hooks/recommended"],
+  "plugins": ["unused-imports"],
   "rules": {
     "react-hooks/exhaustive-deps": "error",
-    "@next/next/no-img-element": "off"
+    "@next/next/no-img-element": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": ["warn"]
   }
 }
