--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "next lint"
+    "test": "NODE_ENV=test jest src/"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -30,11 +30,23 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.12",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.9.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unused-imports": "^3.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript-eslint": "^7.0.2"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:vitormv/perspective-challenge.git",
+  "author": "Vitor Mello <vitor@vmello.com>",
+  "license": "MIT"
 }
