--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Lint
         run: yarn lint
 
+      - name: Lint
+        run: yarn test
+
       - name: Build project
         run: yarn build
